# Individueel_Jurre_Vlas_To_Lars

./: .gitignore  CMakeLists.txt  DOWNLOAD & PUT THIS ON SD CARD.url  README.md
components/RotaryEncoder/: CMakeLists.txt  RotaryEncoder_Adapter.c  RotaryEncoder_Adapter.h  RotaryEncoder_Driver.c  RotaryEncoder_Driver.h
components/[old]rotary_encoder/: rotaryEncoder.c  rotaryEncoder.h
components/audioRecognition/: CMakeLists.txt  audioRecognition.c  audioRecognition.h
components/audiocontroller/: CMakeLists.txt  audioController.c  audioController.h
components/audiocontroller/AudioSetup/: AudioSetup.c  AudioSetup.h
components/audiocontroller/Sources/: httpStream.c  httpStream.h  mp3.c  mp3.h  rawStream.c  rawStream.h  timesource.c  timesource.h  whitenoise.c  whitenoise.h
components/audiocontroller/TimeSpeaker/: timeSpeaker.c  timeSpeaker.h
components/goertzel/: goertzel.c
components/goertzel/include/: goertzel.h
components/menuitems/: CMakeLists.txt  MenuItem.h  bluetooth.c  bluetooth.h  home.c  home.h  internetradio.c  internetradio.h  klok.c  klok.h  mp3.c  mp3.h  reminders.c  reminders.h  settings.c  settings.h  whitenoise.c  whitenoise.h
components/menuitems/popups/: homeworkReminder.c  homeworkReminder.h
components/menutools/: CMakeLists.txt
components/menutools/LCD/: LCD.c  LCD.h
components/menutools/Time/: Time.c  Time.h
components/menutools/statusbar/: statusbar.c  statusbar.h  statusbar_icons.c
components/wifiController/: CMakeLists.txt  wifiController.c  wifiController.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
